--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             >
               Start The Enrollment
             </button>
-            <!-- Modal -->
+            <!-- Modal- -->
             <div
               class="modal fade"
               id="enroll"
